hermes_fuzz_executed_few_shot/fuzz_99_execution
'use strict';
var sum = (() => {
    function sum() {
        return 1 + 2;
    }
    return sum;
})();
sum;
 


```


## License

MIT


Execution Output ------------------:
test.js:18:1: error: non-terminated template literal

^
test.js:12:3: note: template literal started here
```
  ^
test.js:18:1: error: invalid expression

^
